ros2_ws/log/build_2023-04-13_11-05-18/autoro_navigation/stdout_stderr.log
running egg_info
writing ../../build/autoro_navigation/autoro_navigation.egg-info/PKG-INFO
writing dependency_links to ../../build/autoro_navigation/autoro_navigation.egg-info/dependency_links.txt
writing entry points to ../../build/autoro_navigation/autoro_navigation.egg-info/entry_points.txt
writing requirements to ../../build/autoro_navigation/autoro_navigation.egg-info/requires.txt
writing top-level names to ../../build/autoro_navigation/autoro_navigation.egg-info/top_level.txt
reading manifest file '../../build/autoro_navigation/autoro_navigation.egg-info/SOURCES.txt'
writing manifest file '../../build/autoro_navigation/autoro_navigation.egg-info/SOURCES.txt'
running build
running build_py
copying autoro_navigation/navigation_node.py -> /home/mshen/ros2_ws/build/autoro_navigation/build/lib/autoro_navigation
running install
running install_lib
copying /home/mshen/ros2_ws/build/autoro_navigation/build/lib/autoro_navigation/navigation_node.py -> /home/mshen/ros2_ws/install/autoro_navigation/lib/python3.10/site-packages/autoro_navigation
byte-compiling /home/mshen/ros2_ws/install/autoro_navigation/lib/python3.10/site-packages/autoro_navigation/navigation_node.py to navigation_node.cpython-310.pyc
  File "/home/mshen/ros2_ws/install/autoro_navigation/lib/python3.10/site-packages/autoro_navigation/navigation_node.py", line 11
    'costmap'
    ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

running install_data
running install_egg_info
removing '/home/mshen/ros2_ws/install/autoro_navigation/lib/python3.10/site-packages/autoro_navigation-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/autoro_navigation/autoro_navigation.egg-info to /home/mshen/ros2_ws/install/autoro_navigation/lib/python3.10/site-packages/autoro_navigation-0.0.0-py3.10.egg-info
running install_scripts
Installing navigator script to /home/mshen/ros2_ws/install/autoro_navigation/lib/autoro_navigation
Installing talker script to /home/mshen/ros2_ws/install/autoro_navigation/lib/autoro_navigation
writing list of installed files to '/home/mshen/ros2_ws/build/autoro_navigation/install.log'
